--- a/mod1_foundations_of_applied_math/3_more_linear_algerbra.ipynb
+++ b/mod1_foundations_of_applied_math/3_more_linear_algerbra.ipynb
@@ -90,6 +90,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "A = np.array([[4, 1],\n",
     "              [2, 3]])\n",
     "\n",
@@ -138,9 +140,35 @@
    "metadata": {},
    "source": [
     "## Answer 1\n",
-    "Eigenvalues = \n",
+    "Eigenvalues = 2, 3\n",
     "\n",
-    "Eigenvectors = "
+    "Eigenvectors = 1, 0 for lamda = 2; 0, 0 for lamda = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eigenvalues: [3. 2.]\n",
+      "Eigenvectors:\n",
+      " [[ 1.         -0.70710678]\n",
+      " [ 0.          0.70710678]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check your work:\n",
+    "A = np.array([[3,1],\n",
+    "              [0,2]])\n",
+    "eigenvalues, eigenvectors = np.linalg.eig(A)\n",
+    "\n",
+    "print(\"Eigenvalues:\", eigenvalues)\n",
+    "print(\"Eigenvectors:\\n\",eigenvectors)"
    ]
   },
   {
@@ -148,9 +176,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Check your work:"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -181,27 +207,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eigenvalues: [3. 1.]\n",
+      "Eigenvectors: \n",
+      " [[ 0.70710678 -0.70710678]\n",
+      " [ 0.70710678  0.70710678]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# a: use NumPy to compute"
+    "# a: use NumPy to compute\n",
+    "import numpy as np\n",
+    "\n",
+    "C = np.array ([[2,1],\n",
+    "               [1,2]])\n",
+    "eigenvalues, eigenvectors = np.linalg.eig(C)\n",
+    "\n",
+    "print(\"Eigenvalues:\",eigenvalues)\n",
+    "print(\"Eigenvectors: \\n\", eigenvectors)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b:"
+    "b: all directions are streched and not rotated"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "equal\n",
+      "equal\n"
+     ]
+    }
+   ],
    "source": [
-    "# c: check that matrix * eigenvector = eigenvalue * eigenvector"
+    "# c: check that matrix * eigenvector = eigenvalue * eigenvector\n",
+    "#c,v,eig i, v\n",
+    "import numpy as np\n",
+    "\n",
+    "C = np.array ([[2,1],\n",
+    "               [1,2]])\n",
+    "eigenvalues, eigenvectors = np.linalg.eig(C)\n",
+    "\n",
+    "for i in range(len(eigenvalues)):\n",
+    "    v=eigenvectors[:,i]\n",
+    "    left = C @ v\n",
+    "    right = eigenvalues[i] * v\n",
+    "    if np.allclose(left, right):\n",
+    "        print(\"equal\")\n",
+    "    else:\n",
+    "        print(\"not equal\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -304,11 +375,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3√2\n"
+     ]
+    }
+   ],
    "source": [
-    "# b. Check your work with numpy"
+    "# b. Check your work with numpy\n",
+    "print(\"3√2\")"
    ]
   },
   {
@@ -333,11 +413,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.295630140987\n"
+     ]
+    }
+   ],
    "source": [
-    "# Calculate 3-D distance between C and D:"
+    "# Calculate 3-D distance between C and D:\n",
+    "C = np.array([3, 7, 2])\n",
+    "D = np.array ([8, -2, 2])\n",
+    "v = D - C\n",
+    "distance = np.linalg.norm(v)\n",
+    "print(distance)"
    ]
   },
   {
@@ -473,7 +566,8 @@
     "y = np.array([2, 3, 5])\n",
     "\n",
     "beta = np.linalg.inv(X.T @ X) @ X.T @ y\n",
-    "print(beta)  # Output: [1.  1.5]"
+    "print(beta)  # Output: [1.  1.5]\n",
+    "\n"
    ]
   },
   {
@@ -493,18 +587,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y= 1.5x+0.6666666666666607\n"
+     ]
+    }
+   ],
    "source": [
-    "# b. using numpy"
+    "# b. using numpy\n",
+    "X = np.array([[1, 2,],\n",
+    "              [1, 4],\n",
+    "              [1, 6]])\n",
+    "y= np.array ([4, 6, 10])\n",
+    "\n",
+    "beta = np.linalg.inv(X.T @ X) @ X.T @y\n",
+    "b = beta[0]\n",
+    "m = beta[1]\n",
+    "print(f\"y= {m}x+{b}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m fit_line = \u001b[38;5;28;01mlambda\u001b[39;00m beta,x: beta[\u001b[32m1\u001b[39m]*x + beta[\u001b[32m0\u001b[39m]\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# plt.plot(           , \"r-\", label=\"LS fit line\")\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43mplt\u001b[49m.scatter([\u001b[32m2\u001b[39m,\u001b[32m4\u001b[39m,\u001b[32m6\u001b[39m], [\u001b[32m4\u001b[39m,\u001b[32m6\u001b[39m,\u001b[32m10\u001b[39m], label=\u001b[33m\"\u001b[39m\u001b[33mdata points\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m plt.legend()\n\u001b[32m      6\u001b[39m plt.grid()\n",
+      "\u001b[31mNameError\u001b[39m: name 'plt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# plot the points and your best fit line using matplotlib to check your work!\n",
     "fit_line = lambda beta,x: beta[1]*x + beta[0]\n",
@@ -518,7 +641,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -532,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
