--- a/mod1_foundations_of_applied_math/2_intro_to_numerical_methods.ipynb
+++ b/mod1_foundations_of_applied_math/2_intro_to_numerical_methods.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A: YOUR ANSWER HERE"
+    "A: sign of the slope changes"
    ]
   },
   {
@@ -150,7 +150,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A: YOUR ANSWER HERE"
+    "### A: YOUR ANSWER HERE\n",
+    "$$\\frac{-b\\pm\\sqrt{b^{2}-3ac}}{3a}$$"
    ]
   },
   {
@@ -171,6 +172,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$\\pm\\sqrt{2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Bisection Method"
    ]
   },
@@ -185,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,9 +253,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# call the bisection method!\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m root, root_iter = bisection_method(\u001b[43mf\u001b[49m,-\u001b[32m1\u001b[39m,\u001b[32m1\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'f' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# call the bisection method!\n",
     "root, root_iter = bisection_method(f,-1,1)"
@@ -255,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +329,9 @@
    "outputs": [],
    "source": [
     "# extrem1, extrem_iter1 = bisection_method( func, a, b )             \n",
-    "# print(\"The MAXIMUM value of f(x) occurs when x = {}\".format(extrem1))"
+    "# print(\"The MAXIMUM value of f(x) occurs when x = {}\".format(extrem1))\n",
+    "def bisection_method(f, a, b, tol=1e-5)\n",
+    "    "
    ]
   },
   {
@@ -328,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +592,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -584,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
