--- a/mod2_intermediate_python/2_class_inheritance.ipynb
+++ b/mod2_intermediate_python/2_class_inheritance.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,12 +154,23 @@
     "        return f\"{self.name} says: Woof!\"\n",
     "    \n",
     "    def get_info(self):\n",
-    "        return f\"{self.name} is {self.age} years old\"\n"
+    "        return f\"{self.name} is {self.age} years old\"\n",
+    "\n",
+    "class Fish:\n",
+    "    \"\"\"A general Koi class with common attributes and methods\"\"\"\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    def speak(self):\n",
+    "        return f\"{self.name} says: keep on swimming!\"\n",
+    "    def get_info(self):\n",
+    "        return f\"{self.name} is {self.age} years old\" \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -167,15 +178,22 @@
      "output_type": "stream",
      "text": [
       "Rex says: Woof!\n",
-      "Rex is 5 years old\n"
+      "Rex is 5 years old\n",
+      "smallfish says: keep on swimming!\n",
+      "smallfish is 3 years old\n"
      ]
     }
    ],
    "source": [
     "# Create an instance of Dog\n",
+    "#create an variable of the type, Dog\n",
     "generic_dog = Dog(\"Rex\", 5)\n",
     "print(generic_dog.bark())\n",
-    "print(generic_dog.get_info())\n"
+    "print(generic_dog.get_info())\n",
+    "\n",
+    "generic_koi = Fish(\"smallfish\",3)\n",
+    "print(generic_koi.speak())\n",
+    "print(generic_koi.get_info())"
    ]
   },
   {
@@ -189,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,12 +238,13 @@
     "    \n",
     "    def bark(self):\n",
     "        # Override with a different breed-specific behavior\n",
-    "        return f\"{self.name} says: Yip yip! (high-pitched bark)\"\n"
+    "        return f\"{self.name} says: Yip yip! (high-pitched bark)\"\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +365,12 @@
     "        return f\"{self.name} says: Meow!\"\n",
     "    \n",
     "    def get_info(self):\n",
-    "        return f\"{self.name} is {self.age} years old\"\n"
+    "        return f\"{self.name} is {self.age} years old\"\n",
+    "\n",
+    "# TODO: Create your Tuxedo class here\n",
+    "# class Tuxedo(Cat):\n",
+    "#     ...\n",
+    "\n"
    ]
   },
   {
@@ -366,13 +390,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Create your Tuxedo class here\n",
     "# class Tuxedo(Cat):\n",
-    "#     ...\n"
+    "#     ...\n",
+    "\n",
+    "class Cat:\n",
+    "    \"\"\"A general Cat class\"\"\"\n",
+    "    \n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    \n",
+    "    def meow(self):\n",
+    "        return f\"{self.name} says: Meow!\"\n",
+    "    \n",
+    "    def get_info(self):\n",
+    "        return f\"{self.name} is {self.age} years old\"\n",
+    "    \n",
+    "class TuxedoCat(Cat):\n",
+    "    \"\"\"Tuxedo Cat has a fancy suite\"\"\"\n",
+    "\n",
+    "    def __init__(self, name, age, white_chest=True):\n",
+    "       super().__init__(name, age)\n",
+    "       self.white_chest = white_chest\n",
+    "\n",
+    "    def hunt(self):\n",
+    "        return f\"{self.name} hunts a bird\"\n",
+    "    def look_fancy(self):\n",
+    "        return f\"fancy cat is me\"\n",
+    "    def meow(self):\n",
+    "        return f\"{self.name} says meow meow!\"\n",
+    "    \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -407,20 +461,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Generic Cat ===\n",
+      "Whiskers is 4 years old\n",
+      "Whiskers says: Meow!\n",
+      "\n",
+      "=== Tuxedo Cat ===\n",
+      "Mr. Mittens is 2 years old\n",
+      "Mr. Mittens says meow meow!\n",
+      "Mr. Mittens hunts a bird\n",
+      "white chest: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Create instances\n",
-    "whiskers = Cat(\"Whiskers\", 4)\n",
-    "# mr_mittens = Tuxedo( ??? )\n",
+    "generic_cat = Cat(\"Whiskers\", 4)\n",
+    "tuxedo_cat = TuxedoCat(\"Mr. Mittens\", 2)\n",
     "\n",
     "print(\"=== Generic Cat ===\")\n",
     "# call your methods here!\n",
+    "print(generic_cat.get_info())\n",
+    "print(generic_cat.meow())\n",
+    "\n",
     "\n",
     "print(\"\\n=== Tuxedo Cat ===\")\n",
     "# call your methods here!\n",
-    "\n"
+    "print(tuxedo_cat.get_info())\n",
+    "print(tuxedo_cat.meow())\n",
+    "print(tuxedo_cat.hunt())\n",
+    "print(f\"white chest: {tuxedo_cat.white_chest}\")\n"
    ]
   },
   {
@@ -450,9 +526,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "buddy is a GoldenRetriever: True\n",
+      "buddy is a Dog: True\n",
+      "buddy is a Cat: False\n",
+      "\n",
+      "generic_dog is a Dog: True\n",
+      "generic_dog is a GoldenRetriever: False\n"
+     ]
+    }
+   ],
    "source": [
     "# Using isinstance() to check object types\n",
     "print(\"buddy is a GoldenRetriever:\", isinstance(buddy, GoldenRetriever))\n",
@@ -537,15 +626,24 @@
     "**Discuss with a partner or think through:**\n",
     "\n",
     "1. **What is the difference between a parent class, a child class, and an instance?**\n",
+    "parent class is what give inheritance to child class.\n",
+    "child class inherits from parent class\n",
+    "Instance is variable of specific class type\n",
     "\n",
     "2. **When should you use inheritance vs. composition?**\n",
     "   - Hint: Think about the \"is-a\" vs. \"has-a\" relationship\n",
+    "Use inheritance when child can be generalized into a parent.\n",
+    "Use composition when it can't be, and is a composition\n",
     "\n",
     "3. **What does `super().__init__()` do and why is it important?**\n",
+    "It calls the constructor of parent class\n",
     "\n",
     "4. **Can you override any method in a child class? Should you?**\n",
+    "Yes. When I need to make changes by redefinng them\n",
     "\n",
     "5. **Give an example of inheritance from your own interests** (sports, music, technology, etc.)\n",
+    "child class triphop is inherits from parent class music\n",
+    "kendo inherits from swordmanship\n",
     "\n",
     "---\n"
    ]
@@ -553,7 +651,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cps",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -567,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
