--- a/mod2_intermediate_python/3_algorithm_puzzles.ipynb
+++ b/mod2_intermediate_python/3_algorithm_puzzles.ipynb
@@ -30,14 +30,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your function here!\n",
-    "def longest_palindrome(string) -> str:\n",
-    "    pass"
+    "\n",
+    "word = input(\"Enter the word: \")\n"
    ]
   },
   {
@@ -108,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -141,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
