--- a/mod4_intro_to_ML/2_preprocessing.ipynb
+++ b/mod4_intro_to_ML/2_preprocessing.ipynb
@@ -54,7 +54,7 @@
       "metadata": {},
       "source": [
         "### A: \n",
-        "YOUR ANSWER HERE"
+        "It only focuses on the size of number rather than units and missunderstand the actual importance of the number. "
       ]
     },
     {
@@ -101,7 +101,7 @@
       "metadata": {},
       "source": [
         "### A: \n",
-        "YOUR ANSWER HERE"
+        "Works better When we want all values to have equal influence on the model."
       ]
     },
     {
@@ -146,7 +146,7 @@
       "metadata": {},
       "source": [
         "### A: \n",
-        "YOUR ANSWER HERE"
+        "For example, when making list of all fish species that lives in gulf coast, one-hot encoding will require column that is long as the number of fish species for all fish that exists. This will cause inefficient memory usage."
       ]
     },
     {
@@ -212,7 +212,7 @@
       "metadata": {},
       "source": [
         "### A: \n",
-        "YOUR ANSWER HERE"
+        "The most important process is encoding. PCA is helpful by making process simpler, but model will be similarly evaluated even without this process. Scaling prevents the wrong emphasis on the data but algorithm cannot understand the data. Encoding is the part where algorithm can interpret the data. \n"
       ]
     },
     {
