--- a/mod4_intro_to_ML/3_model_performance.ipynb
+++ b/mod4_intro_to_ML/3_model_performance.ipynb
@@ -68,8 +68,7 @@
    "id": "3fdbde4d",
    "metadata": {},
    "source": [
-    "### A:\n",
-    "YOUR ANSWER HERE"
+    "### A: Machine learning is an algorithm learning how data is related to each other so it can make prediciton in the future. Within given example, ML is the student learning the correlation between problem+time and performance in the test, and performing prediciton in the future cases. Student will be able to predict the performance from data, due to the training process. This is all part of ML.\n"
    ]
   },
   {
@@ -161,8 +160,8 @@
    "id": "a23eb441",
    "metadata": {},
    "source": [
-    "### A: \n",
-    "YOUR ANSWER HERE"
+    "### A: 80% train 20% test: With more data being allocated for training, the model is more likely to learn correct, actual pattern in the data set. However, less data for test decreases the chance of detecting when the model falls into overfitted category. \n",
+    "### When it is half and half, ML model doesn't get enough material to be trained. Therefore, it will make more wrong predictions. But we will know for sure when the model fails to generalize due to great number of test data that model's predictions can be compared to. \n"
    ]
   },
   {
@@ -225,8 +224,7 @@
    "id": "57d4130d",
    "metadata": {},
    "source": [
-    "### A: \n",
-    "YOUR ANSWER HERE"
+    "### A: no. accuracy can be misleading with multi class data set. We need to check the type of data first. "
    ]
   },
   {
@@ -344,7 +342,7 @@
    "metadata": {},
    "source": [
     "### A: \n",
-    "YOUR ANSWER HERE"
+    "Precision $= \\frac{TP}{TP+FP}$. Recall $= \\frac{TP}{TP+FN}$. Numerator must be equal to denominator to satisfy the conditoin. Setting numerator and denominator equal to each other, we get that FP and FN are both equal to zero, since denomenator includes TP. By the result, we can say that there is no failure in the prediction that model made. "
    ]
   },
   {
@@ -362,7 +360,7 @@
    "metadata": {},
    "source": [
     "### A: \n",
-    "YOUR ANSWER HERE"
+    "Increasing precision means decreasing false positives. This raises falst negative, which lowers the recall. Because both are dependent on model's classification of positive, increasing one may decrease another and vice versa. "
    ]
   },
   {
@@ -428,7 +426,8 @@
    "metadata": {},
    "source": [
     "### A: \n",
-    "YOUR ANSWER HERE"
+    "If there is data imbalance, model might ignore the learning process and prediction. Instead, it might just choose the one that has higher composition in data to increase the correct predictions. \n",
+    "Using stratified k-fold CV will resolve data imbalance. "
    ]
   },
   {
@@ -483,7 +482,7 @@
    "source": [
     "### A:\n",
     "\n",
-    "YOUR ANSWER HERE"
+    "I am not sure "
    ]
   },
   {
