--- a/mod5_supervised_learning/2_more_classification.ipynb
+++ b/mod5_supervised_learning/2_more_classification.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "zdgm4x6w0r",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,34 @@
     "\n",
     "print(f\"Training samples: {len(X1_train)}\")\n",
     "print(f\"Testing samples: {len(X1_test)}\")\n",
-    "print(f\"Class distribution: {np.bincount(y1_train)}\")"
+    "print(f\"Class distribution: {np.bincount(y1_train)}\")\n",
+    "\n",
+    "'''# Step 1: Create a LinearSVC model\n",
+    "model = LinearSVC(random_state=42, max_iter=5000)\n",
+    "\n",
+    "# Step 2: Train the model on the training data\n",
+    "model.fit(X1_train, y1_train)\n",
+    "\n",
+    "# Step 3: Make predictions on the test set\n",
+    "y1_pred = model.predict(X1_test)\n",
+    "\n",
+    "# Step 4: Evaluate the model\n",
+    "# Confusion Matrix\n",
+    "print('Confusion Matrix:\\n', confusion_matrix(y1_test, y1_pred))\n",
+    "\n",
+    "# Classification Report\n",
+    "print('\\nClassification Report:\\n', classification_report(y1_test, y1_pred))\n",
+    "\n",
+    "plt.figure(figsize=(8,5))\n",
+    "DecisionBoundaryDisplay.from_estimator(\n",
+    "    model, X1_train, response_method='predict', \n",
+    "    cmap='viridis', alpha=0.3\n",
+    ")\n",
+    "plt.scatter(X1_train[:,0], X1_train[:,1], c=y1_train, cmap='viridis', edgecolor='k', alpha=0.7)\n",
+    "plt.title('LinearSVC Decision Boundary - Medical Screening')\n",
+    "plt.xlabel('Blood Pressure (normalized)')\n",
+    "plt.ylabel('Cholesterol Level (normalized)')\n",
+    "plt.show()'''"
    ]
   },
   {
@@ -170,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fmh5ok11z95",
    "metadata": {},
    "outputs": [],
@@ -194,7 +221,40 @@
     "\n",
     "# Classification Report\n",
     "# YOUR CODE HERE\n",
-    "# print('\\nClassification Report:\\n', classification_report(     ,     ))"
+    "# print('\\nClassification Report:\\n', classification_report(     ,     ))\n",
+    "\n",
+    "'''# LinearSVC on the flower dataset\n",
+    "linear_moons = LinearSVC(random_state=42, max_iter=500)\n",
+    "linear_moons.fit(X2_train, y2_train)\n",
+    "y2_pred_linear = linear_moons.predict(X2_test)\n",
+    "\n",
+    "print('Confusion Matrix (LinearSVC):\\n', confusion_matrix(y2_test, y2_pred_linear))\n",
+    "print('\\nClassification Report (LinearSVC):\\n', classification_report(y2_test, y2_pred_linear))\n",
+    "\n",
+    "# Linear kernel SVC\n",
+    "svc_lin = SVC(kernel='linear', C=1.0, random_state=42)\n",
+    "svc_lin.fit(X2_train, y2_train)\n",
+    "y2_pred_lin = svc_lin.predict(X2_test)\n",
+    "\n",
+    "print('Confusion Matrix (SVC Linear):\\n', confusion_matrix(y2_test, y2_pred_lin))\n",
+    "print('\\nClassification Report (SVC Linear):\\n', classification_report(y2_test, y2_pred_lin))'''\n",
+    "\n",
+    "\n",
+    "'''# RBF kernel SVC\n",
+    "svc_rbf = SVC(kernel='rbf', gamma=0.7, C=1.0, random_state=42)\n",
+    "svc_rbf.fit(X2_train, y2_train)\n",
+    "y2_pred_rbf = svc_rbf.predict(X2_test)\n",
+    "\n",
+    "print('Confusion Matrix (SVC RBF):\\n', confusion_matrix(y2_test, y2_pred_rbf))\n",
+    "print('\\nClassification Report (SVC RBF):\\n', classification_report(y2_test, y2_pred_rbf))\n",
+    "\n",
+    "# Polynomial kernel SVC (degree 3)\n",
+    "svc_poly = SVC(kernel='poly', degree=3, C=1.0, random_state=42)\n",
+    "svc_poly.fit(X2_train, y2_train)\n",
+    "y2_pred_poly = svc_poly.predict(X2_test)\n",
+    "\n",
+    "print('Confusion Matrix (SVC Polynomial):\\n', confusion_matrix(y2_test, y2_pred_poly))\n",
+    "print('\\nClassification Report (SVC Polynomial):\\n', classification_report(y2_test, y2_pred_poly))'''"
    ]
   },
   {
