--- a/mod6_unsupervised_learning/2_more_centroid_clustering.ipynb
+++ b/mod6_unsupervised_learning/2_more_centroid_clustering.ipynb
@@ -162,7 +162,7 @@
    "metadata": {},
    "source": [
     "### A:\n",
-    "YOUR ANSWER HERE"
+    "stays alway from main cluster"
    ]
   },
   {
@@ -174,12 +174,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f4876139",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d09941ce",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### A:\n",
-    "YOUR ANSWER HERE"
+    "from sklearn import silouhette_"
    ]
   },
   {
@@ -238,7 +239,7 @@
     "        \n",
     "        for i in range(n_samples):\n",
     "            # Calculate distance from point i to each center\n",
-    "            distances = np.array([ YOUR ANSWER HERE for center in centers])\n",
+    "            distances = np.array([ np.sum(abs(X[i]-center) for center in centers)])\n",
     "            # Assign label as the index of the closest center\n",
     "            labels[i] = np.argmin(distances)\n",
     "        \n",
@@ -248,11 +249,11 @@
     "        # Update centers to be the median of points in each cluster\n",
     "        for k in range(n_clusters):\n",
     "            # Get all points assigned to cluster k\n",
-    "            cluster_points = YOUR ANSWER HERE\n",
+    "            cluster_points = X[labels==k]\n",
     "            \n",
     "            if len(cluster_points) > 0:\n",
     "                # Calculate median for each dimension\n",
-    "                centers[k] = YOUR ANSWER HERE\n",
+    "                centers[k] = np.median(cluster_points, axis=0)\n",
     "        \n",
     "        # Check for convergence\n",
     "        if np.allclose(old_centers, centers):\n",
@@ -279,7 +280,7 @@
    "source": [
     "# Important: Set random_state = 57 so we all get the same results\n",
     "# Apply K-Medians function\n",
-    "kmedians_labels, kmedians_centers = KMedians(  YOUR ANSWER HERE  )\n",
+    "kmedians_labels, kmedians_centers = KMedians(X, n_clusters=3, max_iters=100, random_state=57 )\n",
     "\n",
     "print(\"K-Medians Clustering Complete!\")\n",
     "print(f\"Cluster centers shape: {kmedians_centers.shape}\")\n",
@@ -297,10 +298,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dfa33c6f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mplt\u001b[49m.figure(figsize=(\u001b[32m5\u001b[39m,\u001b[32m4\u001b[39m))\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# Scatter plot colored by cluster labels\u001b[39;00m\n\u001b[32m      3\u001b[39m sns.scatterplot(x=X[:, \u001b[32m0\u001b[39m], y=X[:, \u001b[32m1\u001b[39m], hue=kmedians_labels, \n\u001b[32m      4\u001b[39m                palette=\u001b[33m'\u001b[39m\u001b[33mSet2\u001b[39m\u001b[33m'\u001b[39m, s=\u001b[32m80\u001b[39m, alpha=\u001b[32m0.6\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'plt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "plt.figure(figsize=(5,4))\n",
     "# Scatter plot colored by cluster labels\n",
@@ -594,7 +607,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -608,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
