--- a/svmproblem.ipynb
+++ b/svmproblem.ipynb
@@ -6,7 +6,19 @@
    "source": [
     "# Seasonal Drink Classifier: Coffee Shop PCA + SVM\n",
     "\n",
-    "Can you teach a computer which **season** a drink belongs to using flavor features?"
+    "Can you teach a computer which **season** a drink belongs to using only flavor features?\n",
+    "\n",
+    "Seasons:\n",
+    "- 🌸 spring\n",
+    "- ☀️ summer\n",
+    "- 🍂 fall\n",
+    "- ❄️ winter\n",
+    "\n",
+    "You will mainly code two pieces:\n",
+    "1. PCA to visualize drinks in 2D flavor space\n",
+    "2. SVM to classify drinks into seasons\n",
+    "\n",
+    "Everything else (data generation and scaling) is already done for you."
    ]
   },
   {
@@ -35,7 +47,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset (PROVIDED)"
+    "## Dataset (PROVIDED)\n",
+    "\n",
+    "Each drink has these features (0–10 scale):\n",
+    "- `spice`\n",
+    "- `temperature` (0 = iced, 10 = very hot)\n",
+    "- `flavor_notes` (richness / sweetness)\n",
+    "- `fruitiness`\n",
+    "- `color_tone` (0 = very light, 10 = very dark)\n",
+    "- `foaminess`\n",
+    "\n",
+    "Label: `season` ∈ {spring, summer, fall, winter}\n",
+    "\n",
+    "Run the code below to generate the dataset."
    ]
   },
   {
@@ -49,12 +73,11 @@
     "seasons = [\"spring\", \"summer\", \"fall\", \"winter\"]\n",
     "\n",
     "def generate_season_drinks(season, n):\n",
-    "    \"\"\"Generate loosely season-related drink features with noise.\"\"\"\n",
     "    base = {\n",
     "        \"spring\": dict(spice=3, temperature=6, flavor=6, fruit=7, color=3, foam=4),\n",
     "        \"summer\": dict(spice=1, temperature=2, flavor=5, fruit=8, color=2, foam=2),\n",
     "        \"fall\":   dict(spice=8, temperature=8, flavor=8, fruit=3, color=8, foam=7),\n",
-    "        \"winter\": dict(spice=6, temperature=9, flavor=9, fruit=2, color=9, foam=8),\n",
+    "        \"winter\": dict(spice=6, temperature=9, flavor=9, fruit=2, color=9, foam=8)\n",
     "    }\n",
     "    params = base[season]\n",
     "\n",
@@ -71,55 +94,39 @@
     "        \"season\":       [season] * n\n",
     "    })\n",
     "\n",
-    "# Generate 80 drinks total (20 per season)\n",
     "drinks = pd.concat([\n",
     "    generate_season_drinks(s, 20) for s in seasons\n",
     "], ignore_index=True)\n",
     "\n",
     "print(drinks.head())\n",
-    "print(\"\\nDataset size:\", drinks.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"\\n\u2713 Loaded {len(drinks)} drinks across {drinks['season'].nunique()} seasons\\n\")\n"
+    "print(\"\\nDataset size:\", drinks.shape)\n",
+    "print(\"\\nSeason counts:\\n\", drinks[\"season\"].value_counts())\n",
+    "print(f\"\\n✓ Loaded {len(drinks)} drinks across {drinks['season'].nunique()} seasons\\n\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### \ud83d\udc95 Example Drinks (Just for Imagination)\n",
+    "### 🧠 Warm-Up Questions\n",
     "\n",
-    "Each row is a **synthetic drink** with flavor features:\n",
-    "- `spice` (0\u201310) \u2014 cinnamon / nutmeg / chai vibes\n",
-    "- `temperature` (0\u201310) \u2014 0 = iced, 10 = very hot\n",
-    "- `flavor_notes` (0\u201310) \u2014 how rich / sweet / deep the flavor is\n",
-    "- `fruitiness` (0\u201310) \u2014 berries, citrus, etc.\n",
-    "- `color_tone` (0\u201310) \u2014 0 = very light, 10 = very dark\n",
-    "- `foaminess` (0\u201310) \u2014 foam / whipped cream / latte art\n",
-    "\n",
-    "Seasons are labels:\n",
-    "- `spring`, `summer`, `fall`, `winter`\n",
-    "\n",
-    "You can imagine drinks like:\n",
-    "- \ud83c\udf42 **Pumpkin Spice Daydream** \u2192 high spice, hot, dark, foamy \u2192 probably **fall**\n",
-    "- \u2600\ufe0f **Berry Sunrise Refresher** \u2192 iced, fruity, light, low foam \u2192 probably **summer**\n",
-    "- \u2744\ufe0f **Snowfall Vanilla Latte** \u2192 very hot, rich, foamy, dark \u2192 probably **winter**\n",
-    "- \ud83c\udf38 **Blossom Matcha Cooler** \u2192 medium temp, a bit fruity, pastel \u2192 maybe **spring**\n",
-    "\n",
-    "> Our model only sees the **numbers**. Your job: help it learn the seasons!"
+    "Answer in your notebook or discuss with a partner:\n",
+    "1. Which features do you think matter most for telling seasons apart? Why?\n",
+    "2. Which two seasons do you think will be the hardest to separate? Why?\n",
+    "3. If you worked at a cafe, how might you use a \"season predictor\" like this in real life?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PART 1: Prepare Data"
+    "## PART 1: Prepare and Scale Features (Done For You)\n",
+    "\n",
+    "We will:\n",
+    "- Select numeric feature columns\n",
+    "- Scale them so all features are on a similar range\n",
+    "\n",
+    "This is already implemented. Just run the cell."
    ]
   },
   {
@@ -133,13 +140,13 @@
     "    \"fruitiness\", \"color_tone\", \"foaminess\"\n",
     "]\n",
     "\n",
-    "# TODO: Extract features and scale them\n",
-    "X = None  # replace with: drinks[features].values\n",
+    "X = drinks[features].values\n",
+    "y = drinks[\"season\"].values\n",
     "\n",
-    "scaler = None  # replace with: StandardScaler()\n",
-    "X_scaled = None  # replace with: scaler.fit_transform(X)\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
     "\n",
-    "print(\"\\u2713 Data scaled\\n\")\n",
+    "print(\"✓ Data scaled\\n\")\n",
     "print(f\"Original data shape: {X.shape}\")\n",
     "print(f\"Scaled data shape: {X_scaled.shape}\\n\")\n"
    ]
@@ -148,19 +155,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PART 2: PCA \u2014 Visualize Seasonal Flavor Space\n",
+    "### Checkpoint Questions\n",
+    "1. Why might it be a bad idea to run PCA and SVM on **unscaled** flavor features?\n",
+    "2. Which features do you expect to have the biggest impact on whether a drink feels \"winter\" vs \"summer\"?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PART 2: PCA – Visualize Seasonal Flavor Space\n",
     "\n",
-    "We have **6 flavor features**. That\u2019s hard to picture!\n",
+    "Now **you** implement PCA.\n",
     "\n",
-    "**PCA (Principal Component Analysis)** helps by creating new axes:\n",
-    "- **PCA 1**: biggest pattern in the data\n",
-    "- **PCA 2**: second biggest pattern (at a right angle to the first)\n",
+    "Goals:\n",
+    "1. Fit PCA with 2 components on `X_scaled`\n",
+    "2. Transform the data into `X_pca`\n",
+    "3. Plot PCA Component 1 vs Component 2, with points colored by season\n",
     "\n",
-    "We will:\n",
-    "1. Run PCA on the **scaled data**.\n",
-    "2. Plot each drink on a **2D PCA scatter plot**, colored by season.\n",
-    "\n",
-    "> Question to keep in mind: Do certain seasons form **clusters** in this flavor space?"
+    "Think about: do certain seasons form clear clusters?"
    ]
   },
   {
@@ -169,11 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = drinks[\"season\"].values\n",
-    "\n",
-    "# TODO: Create PCA object and transform scaled data\n",
-    "pca = None  # replace with: PCA(n_components=2)\n",
-    "X_pca = None  # replace with: pca.fit_transform(X_scaled)\n",
+    "pca = None\n",
+    "X_pca = None\n",
     "\n",
     "print(\"PCA shape:\", None if X_pca is None else X_pca.shape)\n",
     "print(\"Explained variance ratio:\", None if pca is None else pca.explained_variance_ratio_)\n"
@@ -185,23 +195,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Scatter plot of PCA components colored by season\n",
     "plt.figure(figsize=(8, 5))\n",
     "\n",
     "seasons_unique = drinks[\"season\"].unique()\n",
     "palette = {\n",
-    "    \"spring\": \"#77dd77\",  # green\n",
-    "    \"summer\": \"#ffb347\",  # orange\n",
-    "    \"fall\":   \"#c23b22\",  # red\n",
-    "    \"winter\": \"#779ecb\"   # blue\n",
+    "    \"spring\": \"#77dd77\",\n",
+    "    \"summer\": \"#ffb347\",\n",
+    "    \"fall\":   \"#c23b22\",\n",
+    "    \"winter\": \"#779ecb\"\n",
     "}\n",
     "\n",
     "for s in seasons_unique:\n",
     "    mask = (y == s)\n",
-    "    # Replace None with correct slices of X_pca\n",
     "    plt.scatter(\n",
-    "        None,  # X_pca[mask, 0]\n",
-    "        None,  # X_pca[mask, 1]\n",
+    "        None,\n",
+    "        None,\n",
     "        label=s.capitalize(),\n",
     "        alpha=0.8,\n",
     "        s=60,\n",
@@ -220,26 +228,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**QUESTION A:** Do you see any **groups** of drinks that look like Spring, Summer, Fall, Winter?\n",
+    "### PCA Reflection\n",
+    "Answer in a new markdown cell or on paper:\n",
     "\n",
-    "**QUESTION B:** If you had to name the axes, what would you call them?\n",
-    "- e.g. \"Cozy vs Refreshing\", \"Spicy & Hot vs Cool & Light\""
+    "1. Which seasons look most **separated** in your PCA plot? Which seasons overlap?\n",
+    "2. If you had to name each PCA axis like a TikTok trend, what would you call them?\n",
+    "   - Example: \"Cozy vs Refreshing\" or \"Spicy & Hot vs Cool & Light\"\n",
+    "3. If you added a new feature like `sweetness`, how do you think that might change the PCA picture?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PART 3: Train an SVM Season Classifier\n",
+    "## PART 3: SVM – Build a Season Classifier\n",
     "\n",
-    "Now we build a model that **predicts the season** using the original flavor features.\n",
+    "Now you will train an **SVM classifier** using the scaled features.\n",
     "\n",
-    "We will:\n",
-    "1. Split data into **train** and **test** sets.\n",
-    "2. Train an **SVM classifier** (Support Vector Machine).\n",
-    "3. Evaluate how well it predicts seasons on the test set.\n",
+    "Steps:\n",
+    "1. Split `X_scaled` and `y` into train and test sets\n",
+    "2. Create an SVM with an RBF kernel\n",
+    "3. Fit the model on the training data\n",
+    "4. Predict on the test data\n",
+    "5. Print a classification report\n",
     "\n",
-    "> SVM idea: it finds boundaries that separate classes (seasons) in feature space."
+    "Try to think: will the model confuse any seasons? Which ones?"
    ]
   },
   {
@@ -248,51 +261,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Train/test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    None,  # X_scaled\n",
-    "    None,  # y\n",
+    "    None,\n",
+    "    None,\n",
     "    test_size=0.3,\n",
     "    random_state=0,\n",
-    "    stratify=None  # y\n",
+    "    stratify=None\n",
     ")\n",
     "\n",
-    "# TODO: Create SVM classifier\n",
-    "svm_clf = None  # SVC(kernel='rbf', gamma='scale', C=1.0)\n",
+    "svm_clf = None\n",
     "\n",
-    "# TODO: Fit model and predict on test set\n",
-    "y_pred = None  # svm_clf.predict(X_test)\n",
+    "y_pred = None\n",
     "\n",
     "print(\"Classification report:\\n\")\n",
-    "print(None)  # classification_report(y_test, y_pred)\n"
+    "print(None)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**QUESTION C:** Which seasons does the model do best on? Which are harder?\n",
+    "### SVM Evaluation Questions\n",
     "\n",
-    "**QUESTION D:** Why might some seasons be easier to separate based on these features?"
+    "1. Look at the **precision** and **recall** for each season.\n",
+    "   - Which season is easiest for the model?\n",
+    "   - Which is hardest?\n",
+    "2. Do your PCA clusters match what the SVM report says? For example, if two seasons overlapped in PCA, does the model confuse them?\n",
+    "3. If you could collect **real cafe data**, what extra features would you add to help the model (examples: price, milk type, size, toppings)?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PART 4: Try Your Own Drinks \ud83d\udc4b\ud83c\udf75\n",
+    "## PART 4: Try Your Own Drinks ☕✨\n",
     "\n",
-    "Now invent 2\u20134 of your *own* drinks and see what season the model predicts.\n",
+    "Create your own drinks and see what season the model predicts.\n",
     "\n",
-    "Examples:\n",
-    "- **Caramel Cloud Dream**\n",
-    "- **Iced Strawberry Matcha Glow**\n",
-    "- **Mocha Midnight Storm**\n",
+    "Think of 2–4 fun drink names and decide their flavor numbers:\n",
+    "- Example names:\n",
+    "  - \"Caramel Cloud Dream\"\n",
+    "  - \"Iced Strawberry Matcha Glow\"\n",
+    "  - \"Mocha Midnight Storm\"\n",
     "\n",
-    "Think about:\n",
-    "- spice, temperature, flavor_notes, fruitiness, color_tone, foaminess\n",
-    "- What season do *you* think it belongs to?\n",
-    "- Does the model agree with you?"
+    "Then run the code below after your SVM is trained.\n",
+    "\n",
+    "Before you run it, **guess** the season for each drink yourself. Then compare with the model."
    ]
   },
   {
@@ -301,23 +315,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: After you have a trained scaler, PCA, and svm_clf, try new drinks\n",
-    "\n",
     "new_drinks = pd.DataFrame([\n",
-    "    # Example format (change these!):\n",
     "    {\"name\": \"Caramel Cloud Dream\", \"spice\": 4, \"temperature\": 8, \"flavor_notes\": 9,\n",
     "     \"fruitiness\": 2, \"color_tone\": 7, \"foaminess\": 9},\n",
     "    {\"name\": \"Iced Strawberry Matcha Glow\", \"spice\": 2, \"temperature\": 3, \"flavor_notes\": 6,\n",
-    "     \"fruitiness\": 9, \"color_tone\": 3, \"foaminess\": 4},\n",
+    "     \"fruitiness\": 9, \"color_tone\": 3, \"foaminess\": 4}\n",
     "])\n",
     "\n",
     "feature_cols = [\"spice\", \"temperature\", \"flavor_notes\", \"fruitiness\", \"color_tone\", \"foaminess\"]\n",
     "\n",
-    "# TODO: Scale and predict\n",
-    "X_new = None  # scaler.transform(new_drinks[feature_cols])\n",
-    "pred_seasons = None  # svm_clf.predict(X_new)\n",
+    "X_new = None\n",
+    "pred_seasons = None\n",
     "\n",
-    "new_drinks[\"predicted_season\"] = None  # pred_seasons\n",
+    "new_drinks[\"predicted_season\"] = None\n",
     "print(new_drinks[[\"name\", \"predicted_season\"]])\n"
    ]
   },
@@ -325,11 +335,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**FINAL QUESTION:**\n",
+    "### Final Reflection\n",
     "\n",
-    "Did the model agree with your intuition about each drink\u2019s season?\n",
-    "- If **yes**, why do you think it worked so well?\n",
-    "- If **no**, what flavor features might you change to convince the model?"
+    "1. Did the model agree with your own guesses for your custom drinks? If not, what would you change about the flavor numbers to \"convince\" the model?\n",
+    "2. Do you think season labels for drinks are **objective** (based on features) or **subjective** (based on people\u2019s feelings)? How does that affect modeling?\n",
+    "3. Imagine this model is part of a cafe app that recommends drinks based on the weather. What other data (outside of the drink itself) would you include?\n",
+    "\n",
+    "**Key takeaway:**\n",
+    "PCA helps us **see** patterns in high-dimensional flavor data, and SVM learns **boundaries** between seasons in that space. Together, they turn vibes like \"cozy fall latte\" into patterns a computer can understand."
    ]
   }
  ],
