update module 8: rename/move final notebooks into mod8 folder

--- a/mod8_final_project/clustering_music_genres.ipynb
+++ b/mod8_final_project/clustering_music_genres.ipynb
@@ -211,7 +211,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## PART 2: Find Optimal K"
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PART 2: Find Optimal K"
    ]
   },
   {
@@ -334,7 +341,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " **QUESTION: What k looks optimal?** _____"
+    "### Q: What k looks optimal?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A:\n",
+    "YOUR ANSWER HERE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
    ]
   },
   {
@@ -509,36 +531,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## Analysis"
+    "## Analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " **QUESTION 1: Do your clusters match the actual genres? Why or why not?**\n",
-    "\n",
-    "\n",
-    "\n",
-    " Answer:"
+    "### Q: Do your clusters match the actual genres? Why or why not?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " **QUESTION 2: Are traditional genre labels useful, or should Spotify use clusters based on audio features instead?**\n",
-    "\n",
-    "\n",
-    "\n",
-    " Answer:"
+    "### A:\n",
+    "YOUR ANSWER HERE"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "KEY TAKEAWAY: K-means clustering reveals that music naturally groups\n",
+    "### Q: Are traditional genre labels useful, or should Spotify use clusters based on audio features instead?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A:\n",
+    "YOUR ANSWER HERE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Key Takeaway 🔑\n",
+    "\n",
+    "K-means clustering reveals that music naturally groups\n",
     "by audio characteristics, sometimes challenging traditional genre boundaries.\n",
     "This is why recommendation systems work better than just matching genres!"
    ]
