--- a/mod8_final_project/seasonal_drink_classifier.ipynb
+++ b/mod8_final_project/seasonal_drink_classifier.ipynb
@@ -120,6 +120,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### A:\n",
+    "YOUR ANSWERS HERE\n",
+    "\n",
+    "1.\n",
+    "2.\n",
+    "3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## PART 1: Prepare and Scale Features (Done For You)\n",
     "\n",
     "We will:\n",
@@ -164,7 +176,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PART 2: PCA – Visualize Seasonal Flavor Space\n",
+    "### A:\n",
+    "YOUR ANSWERS HERE\n",
+    "\n",
+    "1.\n",
+    "2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PART 2: Using PCA to Visualize Seasonal Flavor Space\n",
     "\n",
     "Now **you** implement PCA.\n",
     "\n",
@@ -229,12 +259,31 @@
    "metadata": {},
    "source": [
     "### PCA Reflection\n",
-    "Answer in a new markdown cell or on paper:\n",
+    "Answer in the markdown cell below:\n",
     "\n",
     "1. Which seasons look most **separated** in your PCA plot? Which seasons overlap?\n",
     "2. If you had to name each PCA axis like a TikTok trend, what would you call them?\n",
     "   - Example: \"Cozy vs Refreshing\" or \"Spicy & Hot vs Cool & Light\"\n",
     "3. If you added a new feature like `sweetness`, how do you think that might change the PCA picture?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A:\n",
+    "YOUR ANSWERS HERE\n",
+    "\n",
+    "1.\n",
+    "2.\n",
+    "3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
    ]
   },
   {
@@ -294,6 +343,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### A:\n",
+    "YOUR ANSWERS HERE\n",
+    "\n",
+    "1.\n",
+    "2.\n",
+    "3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## PART 4: Try Your Own Drinks ☕✨\n",
     "\n",
     "Create your own drinks and see what season the model predicts.\n",
@@ -338,10 +406,27 @@
     "### Final Reflection\n",
     "\n",
     "1. Did the model agree with your own guesses for your custom drinks? If not, what would you change about the flavor numbers to \"convince\" the model?\n",
-    "2. Do you think season labels for drinks are **objective** (based on features) or **subjective** (based on people\u2019s feelings)? How does that affect modeling?\n",
-    "3. Imagine this model is part of a cafe app that recommends drinks based on the weather. What other data (outside of the drink itself) would you include?\n",
+    "2. Do you think season labels for drinks are **objective** (based on features) or **subjective** (based on people’s feelings)? How does that affect modeling?\n",
+    "3. Imagine this model is part of a cafe app that recommends drinks based on the weather. What other data (outside of the drink itself) would you include?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A:\n",
+    "YOUR ANSWERS HERE\n",
     "\n",
-    "**Key takeaway:**\n",
+    "1.\n",
+    "2.\n",
+    "3."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Key Takeaway 🔑\n",
     "PCA helps us **see** patterns in high-dimensional flavor data, and SVM learns **boundaries** between seasons in that space. Together, they turn vibes like \"cozy fall latte\" into patterns a computer can understand."
    ]
   }
