--- a/mod7_deep_learning/2_more_convolutional_neural_nets.ipynb
+++ b/mod7_deep_learning/2_more_convolutional_neural_nets.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "5ec8f9a6",
    "metadata": {},
    "outputs": [
@@ -35,33 +35,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting torch\n",
-      "  Downloading torch-2.9.1-cp311-none-macosx_11_0_arm64.whl.metadata (30 kB)\n",
-      "Collecting filelock (from torch)\n",
-      "  Downloading filelock-3.20.0-py3-none-any.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: torch in /Users/mialee1103/bwsi-comp-problem-solving/mod1_foundations_of_applied_math/.conda/lib/python3.11/site-packages (2.9.1)\n",
+      "Requirement already satisfied: filelock in /Users/mialee1103/bwsi-comp-problem-solving/mod1_foundations_of_applied_math/.conda/lib/python3.11/site-packages (from torch) (3.20.0)\n",
       "Requirement already satisfied: typing-extensions>=4.10.0 in /Users/mialee1103/bwsi-comp-problem-solving/mod1_foundations_of_applied_math/.conda/lib/python3.11/site-packages (from torch) (4.15.0)\n",
-      "Collecting sympy>=1.13.3 (from torch)\n",
-      "  Using cached sympy-1.14.0-py3-none-any.whl.metadata (12 kB)\n",
-      "Collecting networkx>=2.5.1 (from torch)\n",
-      "  Downloading networkx-3.5-py3-none-any.whl.metadata (6.3 kB)\n",
+      "Requirement already satisfied: sympy>=1.13.3 in /Users/mialee1103/bwsi-comp-problem-solving/mod1_foundations_of_applied_math/.conda/lib/python3.11/site-packages (from torch) (1.14.0)\n",
+      "Requirement already satisfied: networkx>=2.5.1 in /Users/mialee1103/bwsi-comp-problem-solving/mod1_foundations_of_applied_math/.conda/lib/python3.11/site-packages (from torch) (3.5)\n",
       "Requirement already satisfied: jinja2 in /Users/mialee1103/bwsi-comp-problem-solving/mod1_foundations_of_applied_math/.conda/lib/python3.11/site-packages (from torch) (3.1.6)\n",
-      "Collecting fsspec>=0.8.5 (from torch)\n",
-      "  Downloading fsspec-2025.10.0-py3-none-any.whl.metadata (10 kB)\n",
-      "Collecting mpmath<1.4,>=1.1.0 (from sympy>=1.13.3->torch)\n",
-      "  Downloading mpmath-1.3.0-py3-none-any.whl.metadata (8.6 kB)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/mialee1103/bwsi-comp-problem-solving/mod1_foundations_of_applied_math/.conda/lib/python3.11/site-packages (from jinja2->torch) (3.0.3)\n",
-      "Downloading torch-2.9.1-cp311-none-macosx_11_0_arm64.whl (74.5 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m74.5/74.5 MB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m  \u001b[33m0:00:25\u001b[0mm0:00:01\u001b[0m00:01\u001b[0mm\n",
-      "\u001b[?25hDownloading fsspec-2025.10.0-py3-none-any.whl (200 kB)\n",
-      "Downloading networkx-3.5-py3-none-any.whl (2.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m1.2 MB/s\u001b[0m  \u001b[33m0:00:01\u001b[0m eta \u001b[36m0:00:01\u001b[0m0m\n",
-      "\u001b[?25hUsing cached sympy-1.14.0-py3-none-any.whl (6.3 MB)\n",
-      "Downloading mpmath-1.3.0-py3-none-any.whl (536 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m536.2/536.2 kB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m36m-:--:--\u001b[0m\n",
-      "\u001b[?25hDownloading filelock-3.20.0-py3-none-any.whl (16 kB)\n",
-      "Installing collected packages: mpmath, sympy, networkx, fsspec, filelock, torch\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6/6\u001b[0m [torch]32m5/6\u001b[0m [torch]ck]\n",
-      "\u001b[1A\u001b[2KSuccessfully installed filelock-3.20.0 fsspec-2025.10.0 mpmath-1.3.0 networkx-3.5 sympy-1.14.0 torch-2.9.1\n"
+      "Requirement already satisfied: fsspec>=0.8.5 in /Users/mialee1103/bwsi-comp-problem-solving/mod1_foundations_of_applied_math/.conda/lib/python3.11/site-packages (from torch) (2025.10.0)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/mialee1103/bwsi-comp-problem-solving/mod1_foundations_of_applied_math/.conda/lib/python3.11/site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/mialee1103/bwsi-comp-problem-solving/mod1_foundations_of_applied_math/.conda/lib/python3.11/site-packages (from jinja2->torch) (3.0.3)\n"
      ]
     }
    ],
